--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4465,7 +4465,7 @@ input, select, textarea {
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/IMG_7726.jpeg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/IMG_7726.jpeg");
 		background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/IMG_7726.jpeg");
-		background-position: center center;
+		background-position: left left;
 		background-repeat: no-repeat;
 		background-size: cover;
 	}
